more consistent logging usage patterns